--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Track user clicks to links",
   "main": "app.js",
   "dependencies": {
-    "express": "~4.4.4"
+    "express": "~4.4.4",
+    "morgan": "~1.1.1",
+    "body-parser": "~1.4.3",
+    "method-override": "~2.0.2",
+    "node-logentries": "~0.1.4",
+    "moment": "~2.7.0",
+    "colors": "~0.6.2"
   },
   "devDependencies": {
     "mocha": "~1.20.1",
