--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "method-override": "~2.0.2",
     "node-logentries": "~0.1.4",
     "moment": "~2.7.0",
-    "colors": "~0.6.2"
+    "colors": "~0.6.2",
+    "request": "~2.36.0"
   },
   "devDependencies": {
     "mocha": "~1.20.1",
