--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "node-logentries": "~0.1.4",
     "moment": "~2.7.0",
     "colors": "~0.6.2",
-    "request": "~2.36.0"
+    "request": "~2.36.0",
+    "mongojs": "~0.13.0"
   },
   "devDependencies": {
     "mocha": "~1.20.1",
