--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "moment": "~2.7.0",
     "colors": "~0.6.2",
     "request": "~2.36.0",
-    "mongojs": "~0.13.0"
+    "mongojs": "~0.13.0",
+    "underscore": "~1.6.0"
   },
   "devDependencies": {
     "mocha": "~1.20.1",
