--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "expect.js": "~0.3.1"
   },
   "scripts": {
-    "test": "node test/runner.js"
+    "test": "node test/runner.js",
+    "watch": "nodemon --watch source --watch config app.js"
   },
   "keywords": [
     "track",
