--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "colors": "~0.6.2",
     "request": "~2.36.0",
     "mongojs": "~0.13.0",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "respawn": "~0.4.2"
   },
   "devDependencies": {
     "mocha": "~1.20.1",
