moved to seismo

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "request": "~2.36.0",
     "mongojs": "~0.13.0",
     "underscore": "~1.6.0",
-    "respawn": "~0.4.2"
+    "respawn": "~0.4.2",
+    "seismo-client": "0.0.4"
   },
   "devDependencies": {
     "mocha": "~1.20.1",
